<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Santa Money</string>

    <string name="date">Date</string>
    <string name="account_name">Acc:</string>
    <string name="no_list">No List</string>
    <string name="ok_menu">OK</string>
    <string name="enter_amount">Enter amount</string>
    <string name="cStrIn1">Salary</string>
    <string name="cStrIn2">Business</string>
    <string name="cStrIn3">Extra</string>
    <string name="cStrEx1">Transport</string>
    <string name="cStrEx2">Travel</string>
    <string name="cStrEx3">Utilitys</string>
    <string name="cStrEx4">Entertain..</string>
    <string name="cStrEx5">Shopping</string>
    <string name="cStrEx6">Bills</string>
    <string name="cStrEx7">Personal</string>
    <string name="cStrEx8">Food</string>
    <string name="cStrEx9">Other</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="delete">-</string>
</resources>